--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -27,7 +27,7 @@ h1, h2, h3, h4, h5, p {
  font-weight: 700;
 }
 
-input {
+input, button {
  font-size: 24px;
 }
 
@@ -80,4 +80,14 @@ body {
 
 .per-person {
  display: flex;
+}
+
+#tip-selects {
+ display: flex;
+ flex-wrap: wrap;
+}
+
+#tip-selects input, #tip-selects button {
+ flex-basis: 30%;
+ width: 30%;
 }
