add calculator handlers

--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -40,6 +40,10 @@ button, .input-container {
   border-radius: 5px;
 }
 
+button {
+ cursor: pointer;
+}
+
 body {
   background-color: var(--neutral-light-gray-cyan);
 }
