--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -84,9 +84,9 @@ body {
 }
 
 #totals > :first-child {
- display: flex;
- flex-direction: column;
- gap: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 #totals h1 {
@@ -136,12 +136,12 @@ body {
 }
 
 #bill-total input {
-  background: url(./images//icon-dollar.svg) left no-repeat,
-    
+  background: url(./images/icon-dollar.svg) left no-repeat,
+  var(--neutral-very-light-gray-cyan);
 }
 
 #people-total input {
-  background: url(./images//icon-person.svg) left no-repeat,
+  background: url(./images/icon-person.svg) left no-repeat,
     var(--neutral-very-light-gray-cyan);
 }
 
@@ -151,7 +151,7 @@ input {
   display: flex;
   justify-content: space-between;
   margin-top: 6px;
-  border: 2px solid  var(--neutral-very-light-gray-cyan);
+  border: 2px solid var(--neutral-very-light-gray-cyan);
   background-color: var(--neutral-very-light-gray-cyan);
   outline: none;
 }
@@ -160,14 +160,26 @@ input::placeholder {
   color: var(--neutral-gray-cyan);
 }
 
-input:hover, input:focus {
-  border: 2px solid var(hsl(172, 67%, 45%));
+input:hover,
+input:focus {
+  border: 2px solid var(--primary-cyan);
 }
 
-button:hover {
-  background: var(hsl(172, 67%, 45%));
+#tip-selects button:hover {
+  color: var(--neutral-dark-cyan);
+  background-color: hsl(172, 71%, 70%);
 }
 
 button:disabled {
- opacity: .3;
+  opacity: 0.3;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input {
+  -moz-appearance: textfield;
 }
