change reset button background on hover

--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -108,6 +108,10 @@ body {
   padding: 6px;
 }
 
+#totals button:hover {
+ background-color: hsl(172, 71%, 70%);
+}
+
 .per-person {
   display: flex;
   justify-content: space-between;
