--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -168,6 +168,7 @@ body {
 
 #bill-total input,
 #people-total input {
+  width: 282px;
   padding-left: 9px;
   background-origin: content-box;
   background-color: var(--neutral-very-light-gray-cyan);
