--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -169,7 +169,7 @@ body {
 #bill-total input,
 #people-total input {
   width: 282px;
-  padding-left: 9px;
+  padding: 0 9px 0 9px;
   background-origin: content-box;
   background-color: var(--neutral-very-light-gray-cyan);
 }
